--- a/Emotionally Intelligent Machines(EIM's) & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Citations.bib
+++ b/Emotionally Intelligent Machines(EIM's) & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Citations.bib
@@ -1,3 +1,16 @@
+@article{ISSN-2456-2165,
+	author = {Sahiti S. Magapu, Sashank Vaddiparty},
+	year = {2019},
+	month = {01},
+	pages = {594-602},
+	title = {The Study of Emotional Intelligence in
+	Artificial Intelligence},
+	volume = {4},
+	journal = {International Journal of Innovative Science and Research Technology (IJISRT)},
+	url = {https://ijisrt.com/wp-content/uploads/2019/02/IJISRT19JA351.pdf},
+	doi = {}
+}
+
 @article{article,
 	author = {Martins, Paulo},
 	year = {2023},
