--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Dissertation.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Dissertation.tex
@@ -16,9 +16,11 @@
 	\item\relax}
 {\endlist}
 \title{Emotionally Intelligent Machines \& Sentiment Synthesis based on Ancient Vedic Astrology}
-\author{Mohit Singh}
-\affil{College of Computing Sciences \& Information Technology\\{Teerthanker Mahaveer University}\\{Moradabad, Uttar Pradesh,\\{India}}}
-\affil{\href{mailto:mohitsingh5.ms@gmail.com}{mohitsingh5.ms@gmail.com}}
+\author[1]{Mohit Singh}
+\author[2]{Dr. Priyank Singhal}
+\author[3]{Mr. Vikas Kuchhal}
+\affil{College of Computing Sciences \& Information Technology\\Teerthanker Mahaveer University\\Moradabad, Uttar Pradesh\\India}
+\affil[1]{\href{mailto:mohit.tca2212005@tmu.ac.in}{mohit.tca2212005@tmu.ac.in}}
 \affil{DOI:}
 \begin{document}
 	\maketitle
