--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Citations.bib
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Citations.bib
@@ -80,3 +80,33 @@
 	https://doi.org/10.1080/14755610.2022.2093234
 	}
 }
+
+@book{BrihatParasharHoraShastraVol1,
+	author = {Dr. Suresh Chandra Mishra},
+	title = {Brihat Parashar Hora Shastra of Maharishi Parashar},
+	publisher = {Ranjan Publications},
+	volume = {1},
+	%number = {},
+	%series = {},
+	%address = {},
+	%eddition = {},
+	%year = {},
+	%month = {},
+	%note = {},
+	url = {https://archive.org/details/brihat-parashar-hora-shastra-vol-2-suresh-chandra-mishra}
+}
+
+@book{BrihatParasharHoraShastraVol2,
+	author = {Dr. Suresh Chandra Mishra},
+	title = {Brihat Parashar Hora Shastra of Maharishi Parashar},
+	publisher = {Ranjan Publications},
+	volume = {2},
+	%number = {},
+	%series = {},
+	%address = {},
+	%eddition = {},
+	%year = {},
+	%month = {},
+	%note = {},
+	url = {https://archive.org/details/brihat-parashar-hora-shastra-suresh-chandra-mishra}
+}
