--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Hypothesis.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Hypothesis.tex
@@ -1,2 +1,1 @@
-The chapter mainly describes the discussion on relationship between the birth chart 
-the mathematics of dynamical systems, ancient vedic astrology \& the psychology of human behaviour which is completely based on the supporting evidences found during the study of Artificial Emotional Intelligence(AEI). Sentiments can be synthesized in machines and algorithms by means of artificial intution based on the concept of ancient vedic astrology which will lead to the development of more smart and intelligent systems. These type of systems can be very helpful in many areas such as in Healthcare, Education, Business Intelligence, Social Media, Automobile, etc.
+The paper mainly describes the discussion on some similarities and relationships between the parameters of mathematical dynamical systems, ancient vedic astrology, psychology of human behaviour \& artificial neural networks which has been found during the study of Emotional Artificial Intelligence (EAI). These parameters can be useful in synthesis of sentiments in machines and algorithms by means of the generation of artificial intution based on the concept of vedic astrology which will lead to the development of more emotionally smart and intelligent systems. These type of systems can be very helpful to fullfill the current needs and requirements of emotional artificial intelligence in many areas such as in Healthcare, Education, Business Intelligence, Social Media, Automobile, etc.
