--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Introduction.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Introduction.tex
@@ -1,3 +1,3 @@
-%For half a century, artificial-intelligence researchers have focused on giving machines linguistic and mathematical-logical reasoning abilities, modelled after the classic linguistic and mathematical-logical intelligences. This paper describes new research that is giving machines skills of emotional intelligence. Machines have long been able to appear as if they have emotional feelings, but they are now being programmed to also learn when and how to display emotion in ways that enable them to appear empathetic or otherwise emotionally intelligent. They are now being given the ability to sense and recognize expressions of human emotion such as interest, distress, and pleasure, with the recognition that such communication is vital for helping them choose more helpful and less-aggravating behaviour.
+For half a century, artificial-intelligence researchers have focused on giving machines linguistic and mathematical-logical reasoning abilities, modelled after the classic linguistic and mathematical-logical intelligences. This paper describes new research that is giving machines skills of emotional intelligence. Machines have long been able to appear as if they have emotional feelings, but they are now being programmed to also learn when and how to display emotion in ways that enable them to appear empathetic or otherwise emotionally intelligent. They are now being given the ability to sense and recognize expressions of human emotion such as interest, distress, and pleasure, with the recognition that such communication is vital for helping them choose more helpful and less-aggravating behaviour.
 
-%Emotionally Intelligent Machines are the systems that can recognize, interpret, process, and simulate human emotions based on the concept of ancient vedic astrology. They are the machines which can adapt different situations and knows how to handle these situations more intelligently and smartly. In modern technical world, the need of EIM's are can be seen due to their numerous applications which are expanding rapidly. Some of the common applications of EIM's are:
+Emotionally Intelligent Machines are the systems that can recognize, interpret, process, and simulate human emotions which could be based on the concept of the ancient vedic astrology. They are the machines which can adapt different situations and knows how to handle these situations more intelligently and smartly.
