--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Dissertation.tex
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/Dissertation.tex
@@ -6,6 +6,8 @@
 \usepackage{graphicx}
 \graphicspath{ {assets/img/} }
 \usepackage{float}
+\usepackage{amsmath}
+\usepackage[siunitx, RPvoltages, american]{circuitikz}
 \usepackage{polyglossia}
 \setdefaultlanguage{english}
 \setotherlanguage{sanskrit}
