--- a/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Citations.bib
+++ b/Emotionally Intelligent Machines & Sentiment Synthesis based on Ancient Vedic Astrology/assets/Citations.bib
@@ -3,8 +3,8 @@
 	year = {2019},
 	month = {01},
 	pages = {594-602},
-	title = {The Study of Emotional Intelligence in
-	Artificial Intelligence},
+	title = "\href{https://ijisrt.com/wp-content/uploads/2019/02/IJISRT19JA351.pdf}{The Study of Emotional Intelligence in
+	Artificial Intelligence}",
 	volume = {4},
 	journal = {International Journal of Innovative Science and Research Technology (IJISRT)},
 	url = {https://ijisrt.com/wp-content/uploads/2019/02/IJISRT19JA351.pdf},
@@ -13,7 +13,7 @@
 
 @Article{atmos13081292,
 	AUTHOR = {Anthes, Richard A.},
-	TITLE = {Predictability and Predictions},
+	TITLE = "\href{https://www.mdpi.com/2073-4433/13/8/1292}{Predictability and Predictions}",
 	JOURNAL = {Atmosphere},
 	VOLUME = {13},
 	YEAR = {2022},
@@ -27,7 +27,7 @@
 
 @Article{encyclopedia2030084,
 	AUTHOR = {Shen, Bo-Wen and Pielke, Roger A. and Zeng, Xubin and Cui, Jialin and Faghih-Naini, Sara and Paxson, Wei and Atlas, Robert},
-	TITLE = {Three Kinds of Butterfly Effects within Lorenz Models},
+	TITLE = "\href{https://www.mdpi.com/2673-8392/2/3/84}{Three Kinds of Butterfly Effects within Lorenz Models}",
 	JOURNAL = {Encyclopedia},
 	VOLUME = {2},
 	YEAR = {2022},
@@ -39,10 +39,14 @@
 	DOI = {10.3390/encyclopedia2030084}
 }
 
-@article{bhardwaj2023unconscious,
-	title={The Unconscious Mind and Planetary Influences on the Human Unconscious Mind and Personality},
-	author={Bhardwaj, Rishi and Pareek, Aditya},
-	year={2023}
+@article{article,
+	author = {Bhardwaj, Rishi and Pareek, Aditya},
+	year = {2023},
+	month = {03},
+	pages = {},
+	title = "\href{https://www.researchgate.net/profile/Aditya-Pareek-5/publication/369657531_The_Unconscious_Mind_and_Planetary_Influences_on_the_Human_Unconscious_Mind_and_Personality/links/64267047a1b72772e43d6cb7/The-Unconscious-Mind-and-Planetary-Influences-on-the-Human-Unconscious-Mind-and-Personality.pdf}{The Unconscious Mind and Planetary Influences on the Human Unconscious Mind and Personality}",
+	doi = {10.25215/1101.166},
+	url = {https://www.researchgate.net/profile/Aditya-Pareek-5/publication/369657531_The_Unconscious_Mind_and_Planetary_Influences_on_the_Human_Unconscious_Mind_and_Personality/links/64267047a1b72772e43d6cb7/The-Unconscious-Mind-and-Planetary-Influences-on-the-Human-Unconscious-Mind-and-Personality.pdf}
 }
 
 @article{article,
@@ -83,7 +87,7 @@
 
 @book{BrihatParasharHoraShastraVol1,
 	author = {Dr. Suresh Chandra Mishra},
-	title = {Brihat Parashar Hora Shastra of Maharishi Parashar},
+	title = "\href{https://archive.org/details/brihat-parashar-hora-shastra-vol-2-suresh-chandra-mishra}{Brihat Parashar Hora Shastra of Maharishi Parashar}",
 	publisher = {Ranjan Publications},
 	volume = {1},
 	%number = {},
@@ -109,4 +113,28 @@
 	%month = {},
 	%note = {},
 	url = {https://archive.org/details/brihat-parashar-hora-shastra-suresh-chandra-mishra}
+}
+
+@misc{ enwiki:1123380424,
+	author = "{Wikipedia contributors}",
+	title = "1/2 + 1/4 + 1/8 + 1/16 + ⋯ --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2022",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=1/2_%2B_1/4_%2B_1/8_%2B_1/16_%2B_%E2%8B%AF&oldid=1123380424}",
+	note = "[Online; accessed 28-April-2023]"
+}
+
+@misc{ enwiki:1148245424,
+	author = "{Wikipedia contributors}",
+	title = "Ramanujan summation --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2023",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Ramanujan_summation&oldid=1148245424}",
+	note = "[Online; accessed 28-April-2023]"
+}
+
+@misc{ enwiki:1136521972,
+	author = "{Wikipedia contributors}",
+	title = "Robert Plutchik --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2023",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Robert_Plutchik&oldid=1136521972}",
+	note = "[Online; accessed 28-April-2023]"
 }
